<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyBrowser</string>
    <string name="MyEditURL">请输入网址</string>
    <string name="ConfirmURL">确认</string>
    <string name="StopURL">导航</string>
    <string name="action_settings">Settings</string>
    <string name="BackURL">后退</string>
    <string name="ForwardURL">前进</string>
    <string name="SaveURL">收藏</string>
    <string name="RefreshURL">刷新</string>
    <string name="menu">菜单</string>
    <string name="favReadMe">长按可删除收藏</string>
    <string name="quit">退出</string>
    <string name="welcome">你好，</string>
    <string name="instructionA">为了更好的体验请</string>
    <string name="instructionB">&#160;&#160;&#160;&#160;没有帐号?</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="error">用户名或密码错误</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="about">欢迎使用此浏览器\n制作人：zhou\n如果需要源代码可联系本人\n联系邮箱：zxcpangge@163.com</string>


</resources>
